--- a/index1.html
+++ b/index1.html
@@ -1,4 +1,6 @@
 hello world
 This is new line after hello world.
 Welcome!!
-This is my new page!!
+This is my new page!
+
+This is mynew line update.
